--- a/Servicio_2/templates/index.html
+++ b/Servicio_2/templates/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  {%dfasdfasdfa%}
-</body>
+	<!-- <meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title> -->
 
+    {% if title %}
+    <title>{{title}} - microblog</title>
+    {% else %}
+    <title>microblog</title>
+    {% endif %}
+</head>
+  <body>
+    <h1>Hi, {{user.nickname}}!</h1>
+    {% for post in posts %}
+    <p>{{post.author.nickname}} says: <b>{{post.body}}</b></p>
+    {% endfor %}
+  </body>
 </html>
